fixing problems created by backend simplification, parent password related

--- a/mobile/1-Home/home.html
+++ b/mobile/1-Home/home.html
@@ -13,7 +13,7 @@
             href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="/BeeMazing-A1/shared/avatar-styles.css">
+        <link rel="stylesheet" href="/BeeMazing-A1/shared/avatar-styles.css" />
         <style>
             * {
                 margin: 0;
@@ -94,7 +94,7 @@
                 display: flex;
                 justify-content: space-between;
                 align-items: center;
-                background: #FFFFFF; /* white background for avatars */
+                background: #ffffff; /* white background for avatars */
                 padding: 15px;
                 margin: 10px 0;
                 border-radius: 10px;
@@ -102,16 +102,16 @@
                 transition:
                     transform 0.3s ease,
                     box-shadow 0.3s ease;
-                border: 2px solid #FBB740; /* orange border */
-                color: #5D4E41; /* warm brown text */
+                border: 2px solid #fbb740; /* orange border */
+                color: #5d4e41; /* warm brown text */
             }
             .user-list-item:hover {
                 transform: translateY(-5px);
                 box-shadow: 0 4px 12px rgba(251, 183, 64, 0.3);
-                border-color: #5D4E41;
+                border-color: #5d4e41;
             }
             .remove-user-btn {
-                background: #FBB740;
+                background: #fbb740;
                 color: white;
                 border: none;
                 border-radius: 50%;
@@ -128,13 +128,13 @@
                     transform 0.2s ease;
             }
             .remove-user-btn:hover {
-                background-color: #5D4E41;
+                background-color: #5d4e41;
                 transform: scale(1.1);
             }
 
             .settings-btn {
                 font-size: 16px; /* Adjust size if different from X button */
-                color: #5D4E41;
+                color: #5d4e41;
             }
 
             .footer {
@@ -506,7 +506,7 @@
         </script>
 
         <script
-            src="https://kit.fontawesome.com/a076d05399.js"
+            src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/js/all.min.js"
             crossorigin="anonymous"
         ></script>
         <script src="/BeeMazing-A1/shared/avatar-system.js"></script>
